--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>轻贴吧</title>
+    <link rel="shortcut icon" href="./static/icon.png">
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script>
+    if(!!window.ActiveXObject || "ActiveXObject" in window){
+        document.body.innerHTML = '<h1 style="font-size:30px;">请使用最新版Chrome浏览器打开此页！</h1>';
+    }
+</script>
   </body>
 </html>
